Added site processing without sitemap

--- a/TestWork/Views/Home/Details.cshtml
+++ b/TestWork/Views/Home/Details.cshtml
@@ -28,7 +28,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TimeForCheck)
+            @Html.DisplayFor(model => model.TimeForCheck) sec.
         </dd>
 
         <dt>
