--- a/TestWork/Views/Shared/_Layout.cshtml
+++ b/TestWork/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.3/js/bootstrapValidator.js"></script>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.3/css/bootstrapValidator.css" />
+    <script src="~/Scripts/valid.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
