--- a/TestWork/Views/Home/Index.cshtml
+++ b/TestWork/Views/Home/Index.cshtml
@@ -16,10 +16,19 @@
         return true;
     }
 </script>
-@if (@ViewData["Message"] != null)
+@if (@ViewData["MessageBad"] != null)
 {
-    <div class="alert alert-warning alert-dismissible fade show" role="alert" style="margin-top:2%;">
-        @ViewData["Message"]
+    <div class="alert alert-danger alert-dismissible fade show" role="alert" style="margin-top:2%;">
+        @ViewData["MessageBad"]
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+}
+@if (@ViewData["MessageGood"] != null)
+{
+    <div class="alert alert-success alert-dismissible fade show" role="alert" style="margin-top:2%;">
+        @ViewData["MessageGood"]
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
